增加kyc拒绝页面

--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1586,5 +1586,7 @@
     <string name="LT042">Halaga ng taya</string>
     <string name="KYC055">Pahiwatig</string>
     <string name="P337">Nagsimula na ang laro, walang pwedeng tumaya</string>
+    <string name="P331">Ikinalulungkot naming ipaalam sa iyo na tinanggihan ang iyong pagsusumite sa KYC. Mangyaring muling isumite ang mga wastong dokumento upang makumpleto ang proseso. salamat po.</string>
+    <string name="P332">Rason</string>
 </resources>
 
