--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1615,4 +1615,6 @@
     <string name="LT042">Tiền cược</string>
     <string name="KYC055">Mẹo</string>
     <string name="P337">Đã bắt đầu trận, không thể đặt cược</string>
+    <string name="P331">Chúng tôi rất tiếc phải thông báo với bạn rằng yêu cầu KYC của bạn đã bị từ chối. Vui lòng gửi lại các tài liệu hợp lệ để hoàn tất quá trình. Cảm ơn bạn!</string>
+    <string name="P332">Lý do</string>
 </resources>
