--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1670,4 +1670,6 @@
     <string name="LT042">投注金额</string>
     <string name="KYC055">提示</string>
     <string name="P337">已开赛，无法投注</string>
+    <string name="P331">我们很遗憾地通知您，您的KYC提交已被拒绝。请重新提交有效的文件以完成流程。谢谢。</string>
+    <string name="P332">原因</string>
 </resources>
