--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1586,5 +1586,6 @@
     <string name="LT042">Halaga ng taya</string>
     <string name="KYC055">Pahiwatig</string>
     <string name="P337">Nagsimula na ang laro, walang pwedeng tumaya</string>
+    <string name="J748">Promotion</string>
 </resources>
 
