--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1670,4 +1670,5 @@
     <string name="LT042">投注金额</string>
     <string name="KYC055">提示</string>
     <string name="P337">已开赛，无法投注</string>
+    <string name="J748">优惠活动</string>
 </resources>
