--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1743,4 +1743,5 @@
     <string name="LT042">Stake</string>
     <string name="KYC055">Tips</string>
     <string name="P337">The game has started, no bets can be made</string>
+    <string name="J748">Promo</string>
 </resources>
