--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1615,4 +1615,5 @@
     <string name="LT042">Tiền cược</string>
     <string name="KYC055">Mẹo</string>
     <string name="P337">Đã bắt đầu trận, không thể đặt cược</string>
+    <string name="J748">Ưu đãi</string>
 </resources>
