--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1588,5 +1588,6 @@
     <string name="P337">Nagsimula na ang laro, walang pwedeng tumaya</string>
     <string name="P331">Ikinalulungkot naming ipaalam sa iyo na tinanggihan ang iyong pagsusumite sa KYC. Mangyaring muling isumite ang mga wastong dokumento upang makumpleto ang proseso. salamat po.</string>
     <string name="P332">Rason</string>
+    <string name="P330">Isumite muli</string>
 </resources>
 
