--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1087,8 +1087,10 @@
     <string name="password_login">Login password</string>
     <string name="or">O</string>
     <string name="login_privacy">Sa pamamagitan ng pag-sign up, kinukumpirma mo na ikaw ay higit sa 21 taong gulang at sumasang-ayon sa aming Patakaran sa Pagkapribado at Mga Termino at Kundisyon</string>
-    <string name="login_terms_conditions">Mga Tuntunin at Kundisyon</string>
-    <string name="login_privacy_policy">Privacy Policy</string>
+    <string name="login_terms_conditions">Mga Termino at Kundisyon </string>
+    <string name="login_privacy_policy">Patakaran sa Pagkapribado</string>
+    <string name="login_terms_conditions_new">Mga Tuntunin at Kundisyon</string>
+    <string name="login_privacy_policy_new">Privacy Policy</string>
     <string name="otp_login">OTP Login </string>
     <string name="auth_login">Awtorisadong pag-login</string>
     <string name="set">Set up</string>
