--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1141,8 +1141,10 @@
     <string name="password_login">密码登录</string>
     <string name="or">或</string>
     <string name="login_privacy">注册即表示您确认您已年满21岁，并且同意我们的《隐私政策》和《规则条款》</string>
-    <string name="login_terms_conditions">条款和条件</string>
+    <string name="login_terms_conditions">规则条款</string>
     <string name="login_privacy_policy">隐私政策</string>
+    <string name="login_terms_conditions_new">条款和条件</string>
+    <string name="login_privacy_policy_new">隐私政策</string>
     <string name="otp_login">验证码登录/注册</string>
     <string name="auth_login">授权登录</string>
     <string name="set">设定</string>
