--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1617,4 +1617,13 @@
     <string name="P337">Đã bắt đầu trận, không thể đặt cược</string>
     <string name="J748">Ưu đãi</string>
     <string name="nickname_match_error">Các ký tự bạn nhập không khớp (có thể chứa khoảng cách hoặc các ký tự đặc biệt)</string>
+    <string name="P340">Hướng dẫn</string>
+    <string name="P349">Hiệp 1</string>
+    <string name="P350">Hiệp 2</string>
+    <string name="P351">Hiệp 3</string>
+    <string name="P352">FT（Toàn trận）</string>
+    <string name="P348">Tiền thưởng có thể nhận được mỗi hiệp là:</string>
+    <string name="P353">Lưu ý: Nếu bạn cược đến khi tất cả các hiệp kết thúc, thì tiền thưởng sẽ được cộng dồn và nhận tiền thưởng cho tất cả các hiệp trên.</string>
+    <string name="P354">Cộng dồn - có nghĩa là nếu một số điều kiện nhất định được đáp ứng trong nhiều hiệp thì kết quả sẽ được kết hợp hoặc cộng dồn lên nhau để xác định kết quả cuối cùng hoặc tiền thưởng được thanh toán, có khả năng mang lại tiền thắng lớn hơn cho người chơi.</string>
+    <string name="prex_note">Lưu ý:</string>
 </resources>
